projeto bootstrap5-2021 - utilitites border radius

--- a/bootstrap5-2021/aula34/utilities01.html
+++ b/bootstrap5-2021/aula34/utilities01.html
@@ -13,6 +13,14 @@
             margin: 6px;
             background-color: #f9f9f9;
         }
+
+        .radios {
+            display: inline-block;
+            width: 200px;
+            height: 200px;
+            margin: 6px;
+            background-color: #555;
+        }
     </style>
 </head>
 <body>
@@ -51,6 +59,23 @@
         <span class="border border-light"></span>
         <span class="border border-dark"></span>
         <span class="border border-white"></span>
+        <hr>
+
+        <span class="radios rounded"></span>
+        <span class="radios rounded-top"></span>
+        <span class="radios rounded-end"></span>
+        <span class="radios rounded-bottom"></span>
+        <span class="radios rounded-start"></span>
+        <span class="radios rounded-circle"></span>
+        <span class="radios rounded-pill"></span>
+
+        <span class="radios rounded-0"></span>
+        <span class="radios rounded-1"></span>
+        <span class="radios rounded-2"></span>
+        <span class="radios rounded-3"></span>
+        <span class="radios rounded-4"></span>
+        <span class="radios rounded-5"></span>
+
 
     </div>
 </body>
