projeto bootstrap5-2021 - utilitites float

--- a/bootstrap5-2021/aula34/utilities02.html
+++ b/bootstrap5-2021/aula34/utilities02.html
@@ -7,11 +7,19 @@
     <title>Utilities - floats</title>
 </head>
 <body>
-    <div class="container">
+    <div class="container mb-3">
         <div class="clearfix">
             <span class="float-start">float left</span>
             <span class="float-end">float right</span>
         </div>
+    </div>
+    <div class="container">
+        <div class="float-sm-end">flutua para direita em telas pequenas ou maiores</div>
+        <div class="float-md-end">flutua para direira em telas media</div>
+        <div class="float-lg-end">flutua para direita em telas larga</div>
+        <div class="float-xl-end">flutua para direita em telas extra larga</div>
+        <div class="float-xxl-end">flutua para direita em telas xxl</div>
+        <div class="float-none">nao flutuar</div>
     </div>
 </body>
 </html>
