projeto bootstrap5-2021 - exemplo 1 utilitites spacing

--- a/bootstrap5-2021/aula34/utilities06.html
+++ b/bootstrap5-2021/aula34/utilities06.html
@@ -12,5 +12,12 @@
         <div class="p-5 bg-success">eu tenho um preenchimento em todos os lado de 3rem</div>
         <div class="m-5 pb-5 bg-info">eu tenho uma margem em todos os lado 3rem e um preenchimento inferior 3rem</div>
     </div>
+    <hr>
+
+    <div class="container pt-3">
+        <div class="pt-4 bg-warning">esu so tenho um preenchimento superior de 1.5rem</div>
+        <div class="p-5 bg-success">eu tenho um preenchimento em todos os lados de 3rem</div>
+        <div class="m-5 pb-5 bg-info">eu tenho uma margem em todos os lados de 3rem e um preenchimento inferior 3rem</div>
+    </div>
 </body>
 </html>
