--- a/bootstrap5-2021/aula34/utilities06.html
+++ b/bootstrap5-2021/aula34/utilities06.html
@@ -19,5 +19,23 @@
         <div class="p-5 bg-success">eu tenho um preenchimento em todos os lados de 3rem</div>
         <div class="m-5 pb-5 bg-info">eu tenho uma margem em todos os lados de 3rem e um preenchimento inferior 3rem</div>
     </div>
+    <hr>
+
+    <div class="container pt-3">
+        <h1>margin top utilities</h1>
+        <div class="mt-0 bg-warning">margin top 0</div>
+        <div class="mt-1 bg-warning">margin top 1</div>
+        <div class="mt-2 bg-warning">margin top 2</div>
+        <div class="mt-3 bg-warning">margin top 3</div>
+        <div class="mt-4 bg-warning">margin top 4</div>
+        <div class="mt-5 bg-warning">margin top 5</div>
+        <div class="mt-auto bg-warning">margin top auto</div>
+
+        <p>margin top responsivos</p>
+        <div class="mt-sm-5 bg warning">margin top 5 em telas sm</div>
+        <div class="mt-md-5 bg-warning">margin top 5 em telas md</div>
+        <div class="mt-lg-5 bg-warning">margin top 5 em telas lg</div>
+        <div class="mt-xl-5 bg-warning">margin top 5 em telas xl</div>
+    </div>
 </body>
 </html>
