--- a/bootstrap5-2021/aula34/utilities06.html
+++ b/bootstrap5-2021/aula34/utilities06.html
@@ -37,5 +37,17 @@
         <div class="mt-lg-5 bg-warning">margin top 5 em telas lg</div>
         <div class="mt-xl-5 bg-warning">margin top 5 em telas xl</div>
     </div>
+    <hr>
+
+    <div class="container pt-3">
+        <h1>margim bottom utilities</h1>
+        <div class="mb-0 bg-warning">margin bottom 0</div>
+        <div class="mb-1 bg-warning">margin bottom 1</div>
+        <div class="mb-2 bg-warning">margin bottom 2</div>
+        <div class="mb-3 bg-warning">margim bottom 3</div>
+        <div class="mb-4 bg-warning">margim bottom 4</div>
+        <div class="mb-5 bg-warning">margim bottom 5</div>
+        <div class="mb-auto bg-warning">margim bottom auto</div>
+    </div>
 </body>
 </html>
