--- a/bootstrap5-2021/aula34/utilities06.html
+++ b/bootstrap5-2021/aula34/utilities06.html
@@ -5,6 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <title>Utilities - spacing</title>
+    <style>
+        body {
+            margin-bottom: 1000px;
+        }
+    </style>
 </head>
 <body>
     <div class="container">
@@ -48,6 +53,18 @@
         <div class="mb-4 bg-warning">margim bottom 4</div>
         <div class="mb-5 bg-warning">margim bottom 5</div>
         <div class="mb-auto bg-warning">margim bottom auto</div>
+    </div>
+    <hr>
+
+    <div class="container pt-3">
+        <h1>margin left utilities</h1>
+        <div class="ms-0 bg-warning">margin left 0</div>
+        <div class="ms-1 bg-warning">margin left 1</div>
+        <div class="ms-2 bg-warning">margin left 2</div>
+        <div class="ms-3 bg-warning">margin left 3</div>
+        <div class="ms-4 bg-warning">margin left 4</div>
+        <div class="ms-5 bg-warning">margin left 5</div>
+        <div class="ms-auto bg-warning" style="width: 150px;" >margin left auto</div>
     </div>
 </body>
 </html>
