--- a/bootstrap5-2021/aula34/utilities06.html
+++ b/bootstrap5-2021/aula34/utilities06.html
@@ -65,6 +65,12 @@
         <div class="ms-4 bg-warning">margin left 4</div>
         <div class="ms-5 bg-warning">margin left 5</div>
         <div class="ms-auto bg-warning" style="width: 150px;" >margin left auto</div>
+
+        <p>responsive margin left</p>
+        <div class="ms-sm-5 bg-warning">margin left em telas sm</div>
+        <div class="ms-md-5 bg-warning">margin left em telas md</div>
+        <div class="ms-lg-5 bg-warning">margin left em telas lg</div>
+        <div class="ms-xl-5 bg-warning">margin left em telas xl</div>
     </div>
 </body>
 </html>
