projeto bootstrap5-2021 - utilitites spacing exemplo margim right

--- a/bootstrap5-2021/aula34/utilities06.html
+++ b/bootstrap5-2021/aula34/utilities06.html
@@ -72,5 +72,22 @@
         <div class="ms-lg-5 bg-warning">margin left em telas lg</div>
         <div class="ms-xl-5 bg-warning">margin left em telas xl</div>
     </div>
+    <hr>
+
+    <div class="container pt-3">
+        <h1>margin right utilities</h1>
+        <div class="me-0 bg-warning">margin a direita 0</div>
+        <div class="me-1 bg-warning">margin a direita 1</div>
+        <div class="me-2 bg-warning">margin a direita 2</div>
+        <div class="me-3 bg-warning">margin a direita 3</div>
+        <div class="me-4 bg-warning">margin a direita 4</div>
+        <div class="me-5 bg-warning">margin a direita 5</div>
+
+        <p>responsive margin a direita</p>
+        <div class="me-sm-5 bg-warning">margin a direita em telas sm</div>
+        <div class="me-md-5 bg-warning">margin a direita em telas md</div>
+        <div class="me-lg-5 bg-warning">margin a direita em telas lg</div>
+        <div class="me-xl-5 bg-warning">margin a direita em telas xl</div>
+    </div>
 </body>
 </html>
