projeto bootstrap5-2021 - utilitites spacing exemplo margim left and right

--- a/bootstrap5-2021/aula34/utilities06.html
+++ b/bootstrap5-2021/aula34/utilities06.html
@@ -89,5 +89,22 @@
         <div class="me-lg-5 bg-warning">margin a direita em telas lg</div>
         <div class="me-xl-5 bg-warning">margin a direita em telas xl</div>
     </div>
+    <hr>
+
+    <div class="container pt-3">
+        <h1>margin left and right utilities</h1>
+        <div class="mx-0 bg-warning">margin x 0</div>
+        <div class="mx-1 bg-warning">margin x 1</div>
+        <div class="mx-2 bg-warning">margin x 2</div>
+        <div class="mx-3 bg-warning">margin x 3</div>
+        <div class="mx-4 bg-warning">margin x 4</div>
+        <div class="mx-5 bg-warning">margin x 5</div>
+
+        <p>responsive margin x utilities</p>
+        <div class="mx-sm-5 bg-warning">margin x 5 em telas sm</div>
+        <div class="mx-md-5 bg-warning">margin x 5 em telas md</div>
+        <div class="mx-lg-5 bg-warning">margin x 5 em telas lg</div>
+        <div class="mx-xl-5 bg-warning">margin x 5 em telas xl</div>
+    </div>
 </body>
 </html>
