--- a/bootstrap5-2021/aula34/utilities06.html
+++ b/bootstrap5-2021/aula34/utilities06.html
@@ -106,5 +106,22 @@
         <div class="mx-lg-5 bg-warning">margin x 5 em telas lg</div>
         <div class="mx-xl-5 bg-warning">margin x 5 em telas xl</div>
     </div>
+    <hr>
+
+    <div class="container pt-3">
+        <h1>margin top and bottom utilities</h1>
+        <div class="my-0 bg-warning">margin y 0</div>
+        <div class="my-1 bg-warning">margin y 1</div>
+        <div class="my-2 bg-warning">margin y 2</div>
+        <div class="my-3 bg-warning">margin y 3</div>
+        <div class="my-4 bg-warning">margin y 4</div>
+        <div class="my-5 bg-warning">margin y 5</div>
+
+        <p>responisve margin top and bottom</p>
+        <div class="my-sm-5 bg-warning">margin y 5 em telas sm</div>
+        <div class="my-md-5 bg-warning">margin y 5 em telas md</div>
+        <div class="my-lg-5 bg-warning">margin y 5 em telas lg</div>
+        <div class="my-xl-5 bg-warning">margin y 5 em telas xl</div>
+    </div>
 </body>
 </html>
