--- a/bootstrap5-2021/aula34/utilities06.html
+++ b/bootstrap5-2021/aula34/utilities06.html
@@ -123,5 +123,23 @@
         <div class="my-lg-5 bg-warning">margin y 5 em telas lg</div>
         <div class="my-xl-5 bg-warning">margin y 5 em telas xl</div>
     </div>
+    <hr>
+
+    <div class="container pt-3">
+        <h1>padding utilities</h1>
+        <div class="p-0 bg-warning">padding 0</div>
+        <div class="p-1 bg-success">padding 1</div>
+        <div class="p-2 bg-danger">padding 2</div>
+        <div class="p-3 bg-primary">padding 3</div>
+        <div class="p-4 bg-light">padding 4</div>
+        <div class="p-5 bg-info">padding 5</div>
+
+        <p>responsive padding utilities</p>
+        <div class="p-sm-5 bg-warning">padding 5 em telas sm</div>
+        <div class="p-md-5 bg-success">padding 5 em telas md</div>
+        <div class="p-lg-5 bg-danger">padding 5 em telas lg</div>
+        <div class="p-xl-5 bg-primary">padding 5 em telas xl</div>
+    </div>
+
 </body>
 </html>
