projeto bootstrap5-2021 - utilitites spacing exemplo padding top

--- a/bootstrap5-2021/aula34/utilities06.html
+++ b/bootstrap5-2021/aula34/utilities06.html
@@ -140,6 +140,23 @@
         <div class="p-lg-5 bg-danger">padding 5 em telas lg</div>
         <div class="p-xl-5 bg-primary">padding 5 em telas xl</div>
     </div>
+    <hr>
+
+    <div class="container pt-3">
+        <h1>padding top utilities</h1>
+        <div class="pt-0 bg-warning">padding top 0</div>
+        <div class="pt-1 bg-success">padding top 1</div>
+        <div class="pt-2 bg-danger">padding top 2</div>
+        <div class="pt-3 bg-primary">padding top 3</div>
+        <div class="pt-4 bg-light">padding top 4</div>
+        <div class="pt-5 bg-info">padding top 5</div>
+
+        <p>responsive padding top</p>
+        <div class="pt-sm-5 bg-warning">padding top 5 em telas sm</div>
+        <div class="pt-md-5 bg-success">padding top 5 em telas md</div>
+        <div class="pt-lg-5 bg-danger">padding top 5 em telas lg</div>
+        <div class="pt-xl-5 bg-primary">padding top 5 em telas xl</div>
+    </div>
 
 </body>
 </html>
