projeto bootstrap5-2021 - utilitites spacing exemplo padding bottom

--- a/bootstrap5-2021/aula34/utilities06.html
+++ b/bootstrap5-2021/aula34/utilities06.html
@@ -159,5 +159,15 @@
     </div>
     <hr>
 
+    <div class="container pt-3">
+        <h1>padding bottom utilities</h1>
+        <div class="pb-0 bg-warning">padding bottom 0</div>
+        <div class="pb-0 bg-success">padding bottom 1</div>
+        <div class="pb-2 bg-danger">padding bottom 2</div>
+        <div class="pb-3 bg-primary">padding bottom 3</div>
+        <div class="pb-4 bg-light">padding bottom 4</div>
+        <div class="pb-5 bg-info">padding bottom 5</div>
+    </div>
+
 </body>
 </html>
