--- a/bootstrap5-2021/aula34/utilities06.html
+++ b/bootstrap5-2021/aula34/utilities06.html
@@ -167,6 +167,12 @@
         <div class="pb-3 bg-primary">padding bottom 3</div>
         <div class="pb-4 bg-light">padding bottom 4</div>
         <div class="pb-5 bg-info">padding bottom 5</div>
+
+        <p>responsive padding bottom</p>
+        <div class="pb-sm-5 bg-warning">padding bottom 5 em telas sm</div>
+        <div class="pb-md-5 bg-success">padding bottom 5 em telas md</div>
+        <div class="pb-lg-5 bg-danger">padding bottom 5 em telas lg</div>
+        <div class="pb-xl-5 bg-primary">padding bottom 5 em telas xl</div>
     </div>
 
 </body>
