--- a/bootstrap5-2021/aula34/utilities06.html
+++ b/bootstrap5-2021/aula34/utilities06.html
@@ -174,6 +174,23 @@
         <div class="pb-lg-5 bg-danger">padding bottom 5 em telas lg</div>
         <div class="pb-xl-5 bg-primary">padding bottom 5 em telas xl</div>
     </div>
+    <hr>
+
+    <div class="container pt-3">
+        <h1>padding left utilities</h1>
+        <div class="ps-0 bg-warning">padding left 0</div>
+        <div class="ps-1 bg-success">padding left 1</div>
+        <div class="ps-2 bg-danger">padding left 2</div>
+        <div class="ps-3 bg-primary">padding left 3</div>
+        <div class="ps-4 bg-light">padding left 4</div>
+        <div class="ps-5 bg-info">padding left 5</div>
+
+        <p>responsive padding left</p>
+        <div class="ps-sm-5 bg-warning">padding left 5 em telas sm</div>
+        <div class="ps-md-5 bg-success">padding left 5 em telas md</div>
+        <div class="ps-lg-5 bg-danger">padding left 5 em telas lg</div>
+        <div class="ps-xl-5 bg-primary">padding left 5 em telas xl</div>
+    </div>
 
 </body>
 </html>
