projeto bootstrap5-2021 - utilitites spacing exemplo padding right

--- a/bootstrap5-2021/aula34/utilities06.html
+++ b/bootstrap5-2021/aula34/utilities06.html
@@ -191,6 +191,23 @@
         <div class="ps-lg-5 bg-danger">padding left 5 em telas lg</div>
         <div class="ps-xl-5 bg-primary">padding left 5 em telas xl</div>
     </div>
+    <hr>
+
+    <div class="container pt-3">
+        <h1>padding right utilities</h1>
+        <div class="pe-0 bg-warning text-end">padding right 0</div>
+        <div class="pe-1 bg-success text-end">padding right 1</div>
+        <div class="pe-2 bg-danger text-end">padding right 2</div>
+        <div class="pe-3 bg-primary text-end">padding right 3</div>
+        <div class="pe-4 bg-light text-end">padding right 4</div>
+        <div class="pe-5 bg-info text-end">padding right 5</div>
+
+        <p>responsive padding right</p>
+        <div class="pe-sm-5 bg-warning text-end">padding right 5 em telas sm</div>
+        <div class="pe-md-5 bg-success text-end">padding right 5 em telas md</div>
+        <div class="pe-lg-5 bg-danger text-end">padding right 5 em telas lg</div>
+        <div class="pe-xl-5 bg-primary text-end">padding right 4 em telas xl</div>
+    </div>
 
 </body>
 </html>
