projeto bootstrap5-2021 - utilitites spacing exemplo padding top and right

--- a/bootstrap5-2021/aula34/utilities06.html
+++ b/bootstrap5-2021/aula34/utilities06.html
@@ -208,6 +208,17 @@
         <div class="pe-lg-5 bg-danger text-end">padding right 5 em telas lg</div>
         <div class="pe-xl-5 bg-primary text-end">padding right 4 em telas xl</div>
     </div>
+    <hr>
+
+    <div class="container pt-3">
+        <h1>padding top em bottom utilities</h1>
+        <div class="py-0 bg-warning">padding y 0</div>
+        <div class="py-1 bg-success">padding y 1</div>
+        <div class="py-2 bg-danger">padding y 2</div>
+        <div class="py-3 bg-primary">padding y 3</div>
+        <div class="py-4 bg-light">padding y 4</div>
+        <div class="py-5 bg-info">padding y 5</div>
+    </div>
 
 </body>
 </html>
