--- a/bootstrap5-2021/aula34/utilities06.html
+++ b/bootstrap5-2021/aula34/utilities06.html
@@ -219,6 +219,17 @@
         <div class="py-4 bg-light">padding y 4</div>
         <div class="py-5 bg-info">padding y 5</div>
     </div>
+    <hr>
+
+    <div class="container pt-3">
+        <h1>padding left and right</h1>
+        <div class="px-0 bg-warning">padding x 0</div>
+        <div class="px-1 bg-success">padding x 1</div>
+        <div class="px-2 bg-danger">padding x 2</div>
+        <div class="px-3 bg-primary">padding x 3</div>
+        <div class="px-4 bg-light">padding x 4</div>
+        <div class="px-5 bg-info">padding x 5</div>
+    </div>
 
 </body>
 </html>
