projeto bootstrap5-2021 - utilitites shadow

--- a/bootstrap5-2021/aula34/utilitites07.html
+++ b/bootstrap5-2021/aula34/utilitites07.html
@@ -9,6 +9,7 @@
 <body>
     <div class="container mt-3">
         <h1>shadows</h1>
+        <p>utilizando a classe shadow para adicionar sombras a um elemento</p>
         <div class="shadow-none p-4 mb-4 bg-light">no shadow</div>
         <div class="shadow-sm p-4 mb-4 bg-white">small shadow</div>
         <div class="shadow p-4 mb-4 bg-white">default shadow</div>
