--- a/bootstrap5-2021/aula34/utilities11.html
+++ b/bootstrap5-2021/aula34/utilities11.html
@@ -10,6 +10,15 @@
     <div class="container mt-3">
         <h1>contextual colors</h1>
         <p class="text-muted">text muted</p>
+        <p class="text-primary">text important</p>
+        <p class="text-success">text success</p>
+        <p class="text-info">text info</p>
+        <p class="text-warning">text warning</p>
+        <p class="text-danger">text danger</p>
+        <p class="text-secondary">text secondary</p>
+        <p class="text-dark">text dark</p>
+        <p class="text-light">text light</p>
+        <p class="text-white">text white</p>
     </div>
 </body>
 </html>
