projeto bootstrap5-2021 - utilitites contextual link colors

--- a/bootstrap5-2021/aula34/utilities11.html
+++ b/bootstrap5-2021/aula34/utilities11.html
@@ -20,5 +20,29 @@
         <p class="text-light">text light</p>
         <p class="text-white">text white</p>
     </div>
+    <hr>
+
+    <div class="container mt-3">
+        <h1>contextual link colors</h1>
+        <a href="#" class="text-muted">muted link</a>
+        <br>
+        <a href="#" class="text-primary">primary link</a>
+        <br>
+        <a href="#" class="text-success">success link</a>
+        <br>
+        <a href="#" class="text-info">info link</a>
+        <br>
+        <a href="#" class="text-warning">warning link</a>
+        <br>
+        <a href="#" class="text-danger">danger link</a>
+        <br>
+        <a href="#" class="text-secondary">secondary link</a>
+        <br>
+        <a href="#" class="text-dark">dark link</a>
+        <br>
+        <a href="#" class="text-body">body link</a>
+        <br>
+        <a href="#" class="text-light">light link</a>
+    </div>
 </body>
 </html>
