projeto bootstrap5-2021 - utilitites opacity text colors

--- a/bootstrap5-2021/aula34/utilities11.html
+++ b/bootstrap5-2021/aula34/utilities11.html
@@ -44,5 +44,12 @@
         <br>
         <a href="#" class="text-light">light link</a>
     </div>
+    <hr>
+
+    <div class="container mt-3">
+        <h1>opacity text colors</h1>
+        <p class="text-black-50">texto preto com opacidade de 50%</p>
+        <p class="text-white-50 bg-dark">texto branco com 50% de opacidade de fundo preto</p>
+    </div>
 </body>
 </html>
