projeto bootstrap5-2021 - utilitites contextual text backougrds

--- a/bootstrap5-2021/aula34/utilitites12.html
+++ b/bootstrap5-2021/aula34/utilitites12.html
@@ -18,5 +18,17 @@
         <div class="bg-dark p-3"></div>
         <div class="bg-light p-3"></div>
     </div>
+    <hr>
+
+    <div class="container mt-3">
+        <h1>backgrounds colors with contrasting text colors</h1>
+        <p class="text-bg-primary">text primary background</p>
+        <p class="text-bg-success">text secondary backgrounds</p>
+        <p class="text-bg-warning">text info backgrounds</p>
+        <p class="text-bg-danger">text danger backgrounds</p>
+        <p class="text-bg-secondary">text secondary backgrounds</p>
+        <p class="text-bg-dark">text dark backgrounds</p>
+        <p class="text-bg-light">text light backgrounds</p>
+    </div>
 </body>
 </html>
