--- a/cfb-bootstrap5/aula1/index.html
+++ b/cfb-bootstrap5/aula1/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <title>cfb cursos - curso de bootstrap</title>
+    <title>CFB cursos - curso de bootstrap</title>
 </head>
 <body>
-    <h1>cfb cursos - curso de bootstrap</h1>
+    <h1>CFB cursos - curso de bootstrap</h1>
 </body>
 </html>
