projeto cfb-boostrap 5 - classe container

--- a/cfb-bootstrap5/aula02/index.html
+++ b/cfb-bootstrap5/aula02/index.html
@@ -9,13 +9,19 @@
 <body>
     <!--
         como usar a classa container em bootstrap
+        variações:
+            -> .container-sm
+            -> .container-md
+            -> .container-lg
+            -> .container-xl
+            -> .container-xxl
     -->
-    <div class="container">
+    <div class="container border bg-dark text-white">
         <h1>cfb cursos - curso de bootstrap 5</h1>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur nam consectetur architecto quae dolorum sed magnam, labore, aut, quis odit eaque. Odio perspiciatis sed, obcaecati delectus voluptatem molestias, iste incidunt at maiores libero adipisci consequatur dolorum nobis voluptas dolore laboriosam enim explicabo rem cupiditate! Veniam rerum unde aspernatur debitis harum, iusto vitae maxime dicta odio? Illum, autem voluptas ipsam quasi commodi ducimus nam eos, enim accusantium tenetur, reiciendis blanditiis iste ea ipsa! Laborum sit aliquid eligendi maxime officiis cupiditate perferendis excepturi molestias asperiores fuga quos, rerum, adipisci laboriosam, et beatae natus qui rem recusandae cumque pariatur? Molestiae eius ea necessitatibus?</p>
     </div>
 
-    <div class="container-fluid">
+    <div class="container-fluid border bg-primary">
         <h1>cfb cursos - curso de bootstrap 5</h1>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur nam consectetur architecto quae dolorum sed magnam, labore, aut, quis odit eaque. Odio perspiciatis sed, obcaecati delectus voluptatem molestias, iste incidunt at maiores libero adipisci consequatur dolorum nobis voluptas dolore laboriosam enim explicabo rem cupiditate! Veniam rerum unde aspernatur debitis harum, iusto vitae maxime dicta odio? Illum, autem voluptas ipsam quasi commodi ducimus nam eos, enim accusantium tenetur, reiciendis blanditiis iste ea ipsa! Laborum sit aliquid eligendi maxime officiis cupiditate perferendis excepturi molestias asperiores fuga quos, rerum, adipisci laboriosam, et beatae natus qui rem recusandae cumque pariatur? Molestiae eius ea necessitatibus?</p>
     </div>
