projeto menu - criando as sessoes do layout

--- a/menu/index.html
+++ b/menu/index.html
@@ -3,9 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Restaurante - Seja bem-vindo</title>
 </head>
 <body>
-    
+    <section class="head">
+
+    </section>
+
+    <section class="banner">
+
+    </section>
+
+    <section class="servicos">
+
+    </section>
+
+    <section class="cardapio">
+
+    </section>
+
+    <section class="depoimentos">
+
+    </section>
+
+    <section class="reservas">
+        
+    </section>
 </body>
 </html>
