--- a/menu/index.html
+++ b/menu/index.html
@@ -12,7 +12,13 @@
 </head>
 <body>
     <section class="head">
-
+        <div class="container">
+            <nav class="navbar navbar-expand-lg pl-0 pr-0">
+                <a class="navbar-brand" href="">
+                    <img  src="./img/logo.png" width="160" class="img-logo" >
+                </a>
+            </nav>
+        </div>
     </section>
 
     <section class="banner">
