--- a/menu/index.html
+++ b/menu/index.html
@@ -17,6 +17,27 @@
                 <a class="navbar-brand" href="">
                     <img  src="./img/logo.png" width="160" class="img-logo" >
                 </a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown">
+                    <span class="navbar-toggler-icon">
+                        <i class="fas fa-bars"></i>
+                    </span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNavDropdown">
+                    <ul class="navbar-nav ml-auto mr-auto">
+                        <li class="nav-item">
+                            <a href="#reservas" class="nav-link">Resevas</a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="#servicos" class="nav-link">Serviços</a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="#cardapio" class="nav-link">Cardapio</a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="#depoimentos" class="nav-link">Depoimentos</a>
+                        </li>
+                    </ul>
+                </div>
             </nav>
         </div>
     </section>
@@ -25,19 +46,19 @@
 
     </section>
 
-    <section class="servicos">
+    <section class="servicos" id="servicos">
 
     </section>
 
-    <section class="cardapio">
+    <section class="cardapio" id="cardapio">
 
     </section>
 
-    <section class="depoimentos">
+    <section class="depoimentos" id="depoimentos">
 
     </section>
 
-    <section class="reserva">
+    <section class="reserva" id="reservas">
 
     </section>
 
