projeto menu - layout menus parte 1

--- a/menu/index.html
+++ b/menu/index.html
@@ -25,16 +25,16 @@
                 <div class="collapse navbar-collapse" id="navbarNavDropdown">
                     <ul class="navbar-nav ml-auto mr-auto">
                         <li class="nav-item">
-                            <a href="#reservas" class="nav-link">Resevas</a>
+                            <a href="#reservas" class="nav-link"><b>Reservas</b></a>
                         </li>
                         <li class="nav-item">
-                            <a href="#servicos" class="nav-link">Serviços</a>
+                            <a href="#servicos" class="nav-link"><b>Serviços</b></a>
                         </li>
                         <li class="nav-item">
-                            <a href="#cardapio" class="nav-link">Cardapio</a>
+                            <a href="#cardapio" class="nav-link"><b>Cardapio</b></a>
                         </li>
                         <li class="nav-item">
-                            <a href="#depoimentos" class="nav-link">Depoimentos</a>
+                            <a href="#depoimentos" class="nav-link"><b>Depoimentos</b></a>
                         </li>
                     </ul>
                 </div>
