--- a/menu/index.html
+++ b/menu/index.html
@@ -49,7 +49,26 @@
     </section>
 
     <section class="banner">
+        <div class="container">
+            <div class="row">
+                <div class="col-6">
+                    <div class="d-flex text-banner">
+                        <h1 ><b>Escolha sua comida <b class="color-primary">favorita.</b></b></h1>
+                        <p>
+                            Aproveite nosso cardapio! Escolha o que desjar e receba em sua casa de forma rapida e segura.
+                        </p>
+                        <div>
+                            <a class="btn btn-yellow mt-4 mr-3">
+                                Ver cardapio
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-6">
 
+                </div>
+            </div>
+        </div>
     </section>
 
     <section class="servicos" id="servicos">
