--- a/menu/index.html
+++ b/menu/index.html
@@ -61,8 +61,23 @@
                             <a class="btn btn-yellow mt-4 mr-3">
                                 Ver cardapio
                             </a>
+                            <a href="#" class="btn btn-white btn-icon-left mt-4 ">
+                                <span class="icon-left">
+                                    <i class="fa fa-phone"></i>
+                                </span>
+                                (17) 91 8892-3322
+                            </a>
                         </div>
                     </div>
+                    <a class="btn btn-sm btn-white btn-social mt-4 mr-3">
+                        <i class="fab fa-instagram"></i>
+                    </a>
+                    <a class="btn btn-sm btn-white btn-social mt-4 mr-3">
+                        <i class="fab fa-facebook-f"></i>
+                    </a>
+                    <a class="btn btn-sm btn-white btn-social mt-4">
+                        <i class="fab fa-whatsapp"></i>
+                    </a>
                 </div>
                 <div class="col-6">
 
