--- a/menu/index.html
+++ b/menu/index.html
@@ -80,7 +80,18 @@
                     </a>
                 </div>
                 <div class="col-6">
-
+                    <div class="card-banner"></div>
+                    <div class="d-flex img-banner">
+                        <img src="./img/burguer.png" />
+                    </div>
+                    <div class="card card-case">
+                        "Entrega rapida e funcionarios simpaticos...."
+                        <br> A comida chegou quente e <br>
+                        muito saborosa!"
+                        <span class="card-case-name">
+                            <b>Thiago lopes</b>
+                        </span>
+                    </div>
                 </div>
             </div>
         </div>
