projeto menu - layout servicos parte 1

--- a/menu/index.html
+++ b/menu/index.html
@@ -98,7 +98,35 @@
     </section>
 
     <section class="servicos" id="servicos">
+        <div class="container">
+            <div class="row">
 
+                <div class="col-12 text-center mb-5">
+                    <span class="hint-title"><b>Servicços</b></span>
+                    <h1 class="title">
+                        <b>Como são nossos serviços ?</b>
+                    </h1>
+                </div>
+
+                <div class="col-4">
+                    <div class="card-icon text-center">
+                        <img src="./img/icone-pedido.svg" width="150" />
+                    </div>
+                    <div class="card-text text-center mt-3">
+                        <p><b>facil de pedir</b></p>
+                        <span>
+                            Voce so precisa de alguns passos para pedir sua comida
+                        </span>
+                    </div>
+                </div>
+                <div class="col-4">
+                    
+                </div>
+                <div class="col-4">
+                    
+                </div>
+            </div>
+        </div>
     </section>
 
     <section class="cardapio" id="cardapio">
