--- a/menu/index.html
+++ b/menu/index.html
@@ -98,6 +98,9 @@
     </section>
 
     <section class="servicos" id="servicos">
+
+        <div class="background-servicos"></div>
+
         <div class="container">
             <div class="row">
 
@@ -108,7 +111,7 @@
                     </h1>
                 </div>
 
-                <div class="col-4">
+                <div class="col-4 mb-5">
                     <div class="card-icon text-center">
                         <img src="./img/icone-pedido.svg" width="150" />
                     </div>
@@ -119,11 +122,27 @@
                         </span>
                     </div>
                 </div>
-                <div class="col-4">
-                    
+                <div class="col-4 mb-5">
+                    <div class="card-icon text-center">
+                        <img src="./img/icone-delivery.svg" width="250" />
+                    </div>
+                    <div class="card-text text-center mt-3">
+                        <p><b>Entrega rapida</b></p>
+                        <span>
+                            Nossa entrega é sempre pontual,rapida e segura
+                        </span>
+                    </div>
                 </div>
-                <div class="col-4">
-                    
+                <div class="col-4 mb-5">
+                    <div class="card-icon text-center">
+                        <img src="./img/icone-qualidade.svg" width="250" />
+                    </div>
+                    <div class="card-text text-center mt-3">
+                        <p><b>Melhor qualidade</b></p>
+                        <span>
+                            Não so a rapidez na entrega, a qualidade também é o nosso forte
+                        </span>
+                    </div>
                 </div>
             </div>
         </div>
