projeto menu - layout servicos parte 2

--- a/menu/index.html
+++ b/menu/index.html
@@ -118,7 +118,7 @@
                     <div class="card-text text-center mt-3">
                         <p><b>facil de pedir</b></p>
                         <span>
-                            Voce so precisa de alguns passos para pedir sua comida
+                            Você so precisa de alguns passos para pedir sua comida
                         </span>
                     </div>
                 </div>
