--- a/menu/index.html
+++ b/menu/index.html
@@ -289,6 +289,9 @@
     </section>
 
     <section class="depoimentos" id="depoimentos">
+
+        <div class="background-depoimentos"></div>
+
         <div class="container">
             <div class="row">
 
@@ -321,9 +324,70 @@
                                     </p>
                                 </div>
                             </div>
+                            <p class="texto-depoimento">
+                                <i class="fas fa-quote-left"></i>
+                                <span>
+                                    Muito bom, recomento de mais! Comida muito bem feita pelo chefe,
+                                    atendimento dentro dos paramentros e boa comunicacao com o cliente
+                                </span>
+                                <i class="fas fa-quote-right"></i>
+                            </p>
+                        </div>
+
+                        <div class="depoimento hidden" id="depoimento-2">
+                            <div class="container-dados-depoimento">
+                                <div class="imagem-depoimento"></div>
+                                <div>
+                                    <p class="nome-depoimento"><b>Ana Beatriz</b></p>
+                                    <p class="nota-depoimento">
+                                        <i class="fas fa-star"></i>
+                                        <i class="fas fa-star"></i>
+                                        <i class="fas fa-star"></i>
+                                        <i class="fas fa-star"></i>
+                                        <i class="fas fa-star"></i>&nbsp; <span>5.0</span>
+                                    </p>
+                                </div>
+                            </div>
+                            <p class="texto-depoimento">
+                                <i class="fas fa-quote-left"></i>
+                                <span>
+                                    Um jantar perfeito do começo ao fim. Comida, experienci, serviço ....
+                                    foi tão maravilhoso que fomos dois dias seguidos - fato inedito para mim em uma viajem
+                                </span>
+                                <i class="fas fa-quote-right"></i>
+                            </p>
+                        </div>
+
+                        <div class="depoimento hidden" id="depoimento-3">
+                            <div class="container-dados-depoimento">
+                                <div class="imagem-depoimento"></div>
+                                <div>
+                                    <p class="nome-depoimento"><b>Joao Guilherme</b></p>
+                                    <p class="nota-depoimento">
+                                        <i class="fas fa-star"></i>
+                                        <i class="fas fa-star"></i>
+                                        <i class="fas fa-star"></i>
+                                        <i class="fas fa-star"></i>
+                                        <i class="far fa-star"></i>&nbsp; <span>4.0</span>
+                                    </p>
+                                </div>
+                            </div>
+                            <p class="texto-depoimento">
+                                <i class="fas fa-quote-left"></i>
+                                <span>
+                                    A comida estava excelente e o serviço gentil nos surpreendeu! 
+                                    Dica: reserve umas 3h para ter uma experiencia incrivel
+                                </span>
+                                <i class="fas fa-quote-right"></i>
+                            </p>
                         </div>
 
                     </div>
+
+                    <a class="btn btn-sm btn-white btn-social mr-3 active">1</a>
+                    <a class="btn btn-sm btn-white btn-social mr-3 ">2</a>
+                    <a class="btn btn-sm btn-white btn-social ">3</a>
+
                 </div>
 
             </div>
