projeto menu - layout depoimentos parte 2

--- a/menu/index.html
+++ b/menu/index.html
@@ -328,7 +328,7 @@
                                 <i class="fas fa-quote-left"></i>
                                 <span>
                                     Muito bom, recomento de mais! Comida muito bem feita pelo chefe,
-                                    atendimento dentro dos paramentros e boa comunicacao com o cliente
+                                    atendimento dentro dos paramentros e boa comunicação com o cliente
                                 </span>
                                 <i class="fas fa-quote-right"></i>
                             </p>
