--- a/menu/index.html
+++ b/menu/index.html
@@ -395,7 +395,43 @@
     </section>
 
     <section class="reserva" id="reservas">
+        <div class="container">
+            <div class="row">
+                <div class="col-12">
 
+                    <div class="card-secondary">
+
+                        <div class="row">
+
+                            <div class="col-7">
+                                <span class="hint-title"><b>Reserva</b></span>
+                                <h1 class="title">
+                                    <b>Quer reservar um horario?</b>
+                                </h1>
+                                <p class="pr-5">
+                                    Mande uma mensagem clicando no botão abaixo
+                                    <br>
+                                    Reserve sua data e horario de forma simples e rapida.
+                                </p>
+                                <a class="btn btn-yellow mt-4">
+                                    Fazer reserva
+                                </a>
+                            </div>
+
+                            <div class="col-5">
+                                <div class="card-reserva"></div>
+                                <div class="d-flex img-banner">
+                                    <img src="./img/icone-reserva.svg" />
+                                </div>
+                            </div>
+
+                        </div>
+
+                    </div>
+
+                </div>
+            </div>
+        </div>
     </section>
 
     <footer>
