--- a/menu/index.html
+++ b/menu/index.html
@@ -444,7 +444,7 @@
 
                 <div class="col-6 container-texto-footer">
                     <p class="mb-0">
-                        <b>Menu on-line</b>&copy; Todos os direitos reservados
+                        <b>Menu On-line</b>&copy; Todos os direitos reservados
                     </p>
                 </div>
 
