projeto menu - layout carrinho parte 3

--- a/menu/index.html
+++ b/menu/index.html
@@ -535,6 +535,22 @@
                     </p>
                 </div>
             </div>
+
+            <a class="btn btn-yellow float-right" id="btnEtapaPedido">
+                Continuar
+            </a>
+
+            <a class="btn btn-yellow float-right hidden" id="btnEtapaEndereco">
+                Revisar pedido
+            </a>
+
+            <a class="btn btn-yellow float-right hidden" id="btnEtapaResumo">
+                Enviar pedido
+            </a>
+
+            <a class="btn btn-yellow float-right mr-3" id="btnVoltar">
+                Voltar
+            </a>
         </div>
 
     </div>
