--- a/menu/index.html
+++ b/menu/index.html
@@ -485,7 +485,7 @@
         <div class="m-body">
             <div class="container">
 
-                <div id="itensCarrinho" class="row mr-0 ml-0">
+                <div id="itensCarrinho" class="row mr-0 ml-0 hidden">
 
                     <div class="col-12 item-carrinho">
                         <div class="img-produto">
@@ -507,8 +507,62 @@
 
                 </div>
 
-                <div id="localEntrega" class="row mr-0 ml-0 hidden">
+                <div id="localEntrega" class="row mr-0 ml-0 ">
                     
+                    <div class="col-4">
+                        <div class="form-group container-cep">
+                            <label>CEP:</label>
+                            <input id="txtCep" type="text" class="form-control " />
+                            <a class="btn btn-yellow btn-sm"><i class="fa fa-search"></i></a>
+                        </div>
+                    </div>
+
+                    <div class="col-8"></div>
+
+                    <div class="col-6">
+                        <div class="form-group">
+                            <label>Endereço:</label>
+                            <input id="txtEndereco" type="text" class="form-control" />
+                        </div>
+                    </div>
+
+                    <div class="col-4">
+                        <div class="form-group">
+                            <label>Bairro:</label>
+                            <input id="txtBairro" type="text" class="form-control" />
+                        </div>
+                    </div>
+
+                    <div class="col-2">
+                        <div class="form-group">
+                            <label>Numero:</label>
+                            <input id="txtNumero" type="text" class="form-control" />
+                        </div>
+                    </div>
+
+                    <div class="col-6">
+                        <div class="form-group">
+                            <label>Cidade:</label>
+                            <input id="txtCidade" type="text" class="form-control" />
+                        </div>
+                    </div>
+
+                    <div class="col-4">
+                        <div class="form-group">
+                            <label>Complemento:</label>
+                            <input id="txtComplemento" type="text" class="form-control" />
+                        </div>
+                    </div>
+
+                    <div class="col-2">
+                        <div class="form-group">
+                            <label>UF:</label>
+                            <select id="ddlUF" class="form-control" >
+                                <option value="-1">...</option>
+                            </select>
+                        </div>
+                    </div>
+
                 </div>
 
                 <div id="resumoCarrinho" class="row mr-0 ml-0 hidden">
