projeto menu - layout carrinho parte 5

--- a/menu/index.html
+++ b/menu/index.html
@@ -507,7 +507,7 @@
 
                 </div>
 
-                <div id="localEntrega" class="row mr-0 ml-0 ">
+                <div id="localEntrega" class="row mr-0 ml-0 hidden">
                     
                     <div class="col-4">
                         <div class="form-group container-cep">
@@ -592,8 +592,32 @@
 
                 </div>
 
-                <div id="resumoCarrinho" class="row mr-0 ml-0 hidden">
-                    
+                <div id="resumoCarrinho" class="row mr-0 ml-0 ">
+                    <div class="col-12">
+                        <p class="title-carrinho mt-4">
+                            <b>Itens do pedido</b>
+                        </p>
+                    </div>
+
+                    <div class="col-12">
+                        <div class="row" id="listaItensResumo">
+
+                            <div class="col-12 item-carrinho resumo">
+                                <div class="img-produto-resumo">
+                                    <img src="./img/cardapio/burguers/burger-au-poivre-kit-4-pack.3ca0e39b02db753304cd185638dad518.jpg" />
+                                </div>
+                                <div class="dados-produto">
+                                    <p class="title-produto-nome">
+                                        <b>Nome do produto</b>
+                                    </p>
+                                    <p class="price-produto-nome">
+                                        <b>Nome do produto</b>
+                                    </p>
+                                </div>
+                            </div>
+
+                        </div>
+                    </div>
                 </div>
 
             </div>
