projeto menu - layout carrinho parte 6

--- a/menu/index.html
+++ b/menu/index.html
@@ -611,13 +611,37 @@
                                         <b>Nome do produto</b>
                                     </p>
                                     <p class="price-produto-nome">
-                                        <b>Nome do produto</b>
+                                        <b>R$ 100,00</b>
                                     </p>
                                 </div>
+                                <p class="quantidade-produto-resumo">
+                                    x <b>3</b>
+                                </p>
                             </div>
 
                         </div>
                     </div>
+
+                    <div class="col-12">
+                        <p class="title-carrinho mt-4">
+                            <b>Local da entrega</b>
+                        </p>
+                    </div>
+
+                    <div class="col-12 item-carrinho resumo">
+                        <div class="img-map">
+                            <i class="fas fa-map-marked-alt"></i>
+                        </div>
+                        <div class="dados-produto">
+                            <p class="texto-endereco">
+                                <b id="resumoEndereco">Rua teste, 200, bairro teste</b>
+                            </p>
+                            <p class="cidade-endereco" id="cidadeEndereco">
+                                Cidade-SP / 12921-890
+                            </p>
+                        </div>
+                    </div>
+
                 </div>
 
             </div>
