--- a/menu/index.html
+++ b/menu/index.html
@@ -688,5 +688,6 @@
     <script type="text/javascript" src="./js/modernizr-3.5.0.min.js"></script>
     <script type="text/javascript" src="./js/bootstrap.min.js"></script>
     <script type="text/javascript" src="./js/popper.min.js"></script>
+    <script type="text/javascript" src="./js/dados.js"></script>
 </body>
 </html>
