projeto menu - manipulando o cardapio parte 1

--- a/menu/index.html
+++ b/menu/index.html
@@ -191,7 +191,7 @@
                     </div>
                 </div>
 
-                <div class="col-12 text-center">
+                <div class="col-12 text-center" onclick="cardapio.metodos.verMais()">
                     <a class="btn btn-white btn-sm">
                         Ver mas
                     </a>
