--- a/menu/index.html
+++ b/menu/index.html
@@ -191,8 +191,8 @@
                     </div>
                 </div>
 
-                <div class="col-12 text-center" onclick="cardapio.metodos.verMais()">
-                    <a class="btn btn-white btn-sm">
+                <div class="col-12 text-center" >
+                    <a id="btnVerMais" class="btn btn-white btn-sm" onclick="cardapio.metodos.verMais()">
                         Ver mas
                     </a>
                 </div>
