--- a/menu/index.html
+++ b/menu/index.html
@@ -11,6 +11,12 @@
     <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
+
+    <a class="botao-carrinho">
+        <div class="badge-total-carrinho">8</div>
+        <i class="fa fa-shopping-bag"></i>
+    </a>
+
     <section class="head">
         <div class="container">
             <nav class="navbar navbar-expand-lg pl-0 pr-0">
@@ -38,8 +44,10 @@
                         </li>
                     </ul>
                     <a class="btn btn-white btn-icon">
+
                         Meu carrinho 
                         <span class="icon">
+                            <div class="container-total-carrinho badge-total-carrinho">8</div>
                             <i class="fa fa-shopping-bag"></i>
                         </span>
                     </a>
