projeto menu - atualiza badged total carrinho

--- a/menu/index.html
+++ b/menu/index.html
@@ -12,8 +12,8 @@
 </head>
 <body>
 
-    <a class="botao-carrinho">
-        <div class="badge-total-carrinho">8</div>
+    <a class="botao-carrinho hidden">
+        <div class="badge-total-carrinho">0</div>
         <i class="fa fa-shopping-bag"></i>
     </a>
 
@@ -47,7 +47,7 @@
 
                         Meu carrinho 
                         <span class="icon">
-                            <div class="container-total-carrinho badge-total-carrinho">8</div>
+                            <div class="container-total-carrinho badge-total-carrinho hidden">0</div>
                             <i class="fa fa-shopping-bag"></i>
                         </span>
                     </a>
