--- a/menu/index.html
+++ b/menu/index.html
@@ -518,7 +518,7 @@
 
                 </div>
 
-                <div id="resumoCarrinho" class="row mr-0 ml-0 ">
+                <div id="resumoCarrinho" class="row mr-0 ml-0 hidden">
                     <div class="col-12">
                         <p class="title-carrinho mt-4">
                             <b>Itens do pedido</b>
