projeto menu - criacao da metodo que para logica de carregar etapas do carrinho parte 2

--- a/menu/index.html
+++ b/menu/index.html
@@ -591,11 +591,11 @@
                 </div>
             </div>
 
-            <a class="btn btn-yellow float-right" id="btnEtapaPedido">
+            <a onclick="cardapio.metodos.carregarEtapa(2) " class="btn btn-yellow float-right" id="btnEtapaPedido">
                 Continuar
             </a>
 
-            <a class="btn btn-yellow float-right hidden" id="btnEtapaEndereco">
+            <a onclick="cardapio.metodos.carregarEtapa(3) " class="btn btn-yellow float-right hidden" id="btnEtapaEndereco">
                 Revisar pedido
             </a>
 
@@ -603,7 +603,7 @@
                 Enviar pedido
             </a>
 
-            <a class="btn btn-yellow float-right mr-3" id="btnVoltar">
+            <a  class="btn btn-yellow float-right mr-3" id="btnVoltar">
                 Voltar
             </a>
         </div>
