projeto menu - criacao da metodo que para voltar de etapa do carrinho

--- a/menu/index.html
+++ b/menu/index.html
@@ -603,7 +603,7 @@
                 Enviar pedido
             </a>
 
-            <a  class="btn btn-yellow float-right mr-3" id="btnVoltar">
+            <a onclick="cardapio.metodos.voltarEtapa() " class="btn btn-yellow float-right mr-3" id="btnVoltar">
                 Voltar
             </a>
         </div>
