--- a/menu/index.html
+++ b/menu/index.html
@@ -193,7 +193,7 @@
                         <i class="fas fa-cocktail"></i> &nbsp; Bebidas
                     </a>
                     <a id="menu-sobremesas" class="btn btn-white btn-sm mr-3" onclick="cardapio.metodos.obterItensCardapio('sobremesas')">
-                        <i class="fas fa-ice-cream"></i> &nbsp; Sobremessas
+                        <i class="fas fa-ice-cream"></i> &nbsp; Sobremesas
                     </a>
                 </div>
 
