--- a/menu/index.html
+++ b/menu/index.html
@@ -170,7 +170,7 @@
 
 
                 <div class="col-12 text-center mb-5">
-                    <span class="hint-title"><b>Cardapio</b></span>
+                    <span class="hint-title"><b>Cardápio</b></span>
                     <h1 class="title">
                         <b>Conheça o nosso cardapio</b>
                     </h1>
