projeto menu - corrige texto do cardapio

--- a/menu/index.html
+++ b/menu/index.html
@@ -206,7 +206,7 @@
 
                 <div class="col-12 text-center" >
                     <a id="btnVerMais" class="btn btn-white btn-sm" onclick="cardapio.metodos.verMais()">
-                        Ver mas
+                        Ver mais
                     </a>
                 </div>
 
