--- a/menu/index.html
+++ b/menu/index.html
@@ -231,7 +231,7 @@
                 <div class="col-7">
                     <span class="hint-title"><b>Depoimentos</b></span>
                     <h1 class="title">
-                        <b>O que dizem sobre nos</b>
+                        <b>O que dizem sobre nós</b>
                     </h1>
 
                     <div class="mb-5">
@@ -253,7 +253,7 @@
                             <p class="texto-depoimento">
                                 <i class="fas fa-quote-left"></i>
                                 <span>
-                                    Muito bom, recomento de mais! Comida muito bem feita pelo chefe,
+                                    Muito bom, recomento demais! Comida muito bem feita pelo chefe,
                                     atendimento dentro dos paramentros e boa comunicação com o cliente
                                 </span>
                                 <i class="fas fa-quote-right"></i>
