--- a/menu/index.html
+++ b/menu/index.html
@@ -68,11 +68,11 @@
                     <div class="d-flex text-banner">
                         <h1 ><b>Escolha sua comida <b class="color-primary">favorita.</b></b></h1>
                         <p>
-                            Aproveite nosso cardapio! Escolha o que desjar e receba em sua casa de forma rapida e segura.
+                            Aproveite nosso cardápio! Escolha o que desjar e receba em sua casa de forma rápida e segura.
                         </p>
                         <div>
                             <a class="btn btn-yellow mt-4 mr-3">
-                                Ver cardapio
+                                Ver cardápio
                             </a>
                             <a href="#" class="btn btn-white btn-icon-left mt-4 ">
                                 <span class="icon-left">
