--- a/menu/index.html
+++ b/menu/index.html
@@ -277,8 +277,8 @@
                             <p class="texto-depoimento">
                                 <i class="fas fa-quote-left"></i>
                                 <span>
-                                    Um jantar perfeito do começo ao fim. Comida, experienci, serviço ....
-                                    foi tão maravilhoso que fomos dois dias seguidos - fato inedito para mim em uma viajem
+                                    Um jantar perfeito do começo ao fim. Comida, experiencia, serviço ....
+                                    foi tão maravilhoso que fomos dois dias seguidos - fato inédito para mim em uma viagem.
                                 </span>
                                 <i class="fas fa-quote-right"></i>
                             </p>
@@ -302,7 +302,7 @@
                                 <i class="fas fa-quote-left"></i>
                                 <span>
                                     A comida estava excelente e o serviço gentil nos surpreendeu! 
-                                    Dica: reserve umas 3h para ter uma experiencia incrivel
+                                    Dica: reserve umas 3h para ter uma experiência incrivel
                                 </span>
                                 <i class="fas fa-quote-right"></i>
                             </p>
