projeto menu - corrige texto do cardapio

--- a/menu/index.html
+++ b/menu/index.html
@@ -254,7 +254,7 @@
                                 <i class="fas fa-quote-left"></i>
                                 <span>
                                     Muito bom, recomento demais! Comida muito bem feita pelo chefe,
-                                    atendimento dentro dos paramentros e boa comunicação com o cliente
+                                    atendimento dentro dos paramentros e boa comunicação com o cliente.
                                 </span>
                                 <i class="fas fa-quote-right"></i>
                             </p>
@@ -302,7 +302,7 @@
                                 <i class="fas fa-quote-left"></i>
                                 <span>
                                     A comida estava excelente e o serviço gentil nos surpreendeu! 
-                                    Dica: reserve umas 3h para ter uma experiência incrivel
+                                    Dica: reserve umas 3h para ter uma experiência incrivel.
                                 </span>
                                 <i class="fas fa-quote-right"></i>
                             </p>
