projeto menu - corrige texto

--- a/menu/index.html
+++ b/menu/index.html
@@ -254,7 +254,7 @@
                                 <i class="fas fa-quote-left"></i>
                                 <span>
                                     Muito bom, recomento demais! Comida muito bem feita pelo chefe,
-                                    atendimento dentro dos paramentros e boa comunicação com o cliente.
+                                    atendimento dentro dos parâmetros e boa comunicação com o cliente.
                                 </span>
                                 <i class="fas fa-quote-right"></i>
                             </p>
