projeto menu - corrige texto

--- a/menu/index.html
+++ b/menu/index.html
@@ -42,7 +42,7 @@
                             <a href="#servicos" class="nav-link"><b>Serviços</b></a>
                         </li>
                         <li class="nav-item">
-                            <a href="#cardapio" class="nav-link"><b>Cardapio</b></a>
+                            <a href="#cardapio" class="nav-link"><b>Cardápio</b></a>
                         </li>
                         <li class="nav-item">
                             <a href="#depoimentos" class="nav-link"><b>Depoimentos</b></a>
@@ -277,7 +277,7 @@
                             <p class="texto-depoimento">
                                 <i class="fas fa-quote-left"></i>
                                 <span>
-                                    Um jantar perfeito do começo ao fim. Comida, experiencia, serviço ....
+                                    Um jantar perfeito do começo ao fim. Comida, experiência, serviço ....
                                     foi tão maravilhoso que fomos dois dias seguidos - fato inédito para mim em uma viagem.
                                 </span>
                                 <i class="fas fa-quote-right"></i>
