--- a/menu/index.html
+++ b/menu/index.html
@@ -49,7 +49,6 @@
                         </li>
                     </ul>
                     <a class="btn btn-white btn-icon" onclick="cardapio.metodos.abrirCarrinho(true)">
-
                         Meu carrinho 
                         <span class="icon">
                             <div class="container-total-carrinho badge-total-carrinho hidden">0</div>
@@ -68,7 +67,7 @@
                     <div class="d-flex text-banner">
                         <h1 ><b>Escolha sua comida <b class="color-primary">favorita.</b></b></h1>
                         <p>
-                            Aproveite nosso cardápio! Escolha o que desjar e receba em sua casa de forma rápida e segura.
+                            Aproveite nosso cardápio! Escolha o que desejar e receba em sua casa de forma rápida e segura.
                         </p>
                         <div>
                             <a class="btn btn-yellow mt-4 mr-3">
