projeto menu - corrige texto

--- a/menu/index.html
+++ b/menu/index.html
@@ -130,7 +130,7 @@
                     <div class="card-text text-center mt-3">
                         <p><b>facil de pedir</b></p>
                         <span>
-                            Você so precisa de alguns passos para pedir sua comida
+                            Você so precisa de alguns passos para pedir sua comida.
                         </span>
                     </div>
                 </div>
@@ -141,7 +141,7 @@
                     <div class="card-text text-center mt-3">
                         <p><b>Entrega rapida</b></p>
                         <span>
-                            Nossa entrega é sempre pontual,rapida e segura
+                            Nossa entrega é sempre pontual,rapida e segura.
                         </span>
                     </div>
                 </div>
@@ -152,7 +152,7 @@
                     <div class="card-text text-center mt-3">
                         <p><b>Melhor qualidade</b></p>
                         <span>
-                            Não so a rapidez na entrega, a qualidade também é o nosso forte
+                            Não so a rapidez na entrega, a qualidade também é o nosso forte.
                         </span>
                     </div>
                 </div>
