projeto menu - corrige texto

--- a/menu/index.html
+++ b/menu/index.html
@@ -128,7 +128,7 @@
                         <img src="./img/icone-pedido.svg" width="150" />
                     </div>
                     <div class="card-text text-center mt-3">
-                        <p><b>facil de pedir</b></p>
+                        <p><b>Facil de pedir</b></p>
                         <span>
                             Você so precisa de alguns passos para pedir sua comida.
                         </span>
