projeto menu - validacao se passa para etapa de endereco

--- a/menu/index.html
+++ b/menu/index.html
@@ -576,7 +576,7 @@
                 </div>
             </div>
 
-            <a onclick="cardapio.metodos.carregarEtapa(2)" class="btn btn-yellow float-right" id="btnEtapaPedido">
+            <a onclick="cardapio.metodos.carregarEndereco()" class="btn btn-yellow float-right" id="btnEtapaPedido">
                 Continuar
             </a>
 
