--- a/menu/index.html
+++ b/menu/index.html
@@ -582,7 +582,7 @@
                 Continuar
             </a>
 
-            <a onclick="cardapio.metodos.carregarEtapa(3)" class="btn btn-yellow float-right hidden" id="btnEtapaEndereco">
+            <a onclick="cardapio.metodos.resumoPedido()" class="btn btn-yellow float-right hidden" id="btnEtapaEndereco">
                 Revisar pedido
             </a>
 
