--- a/menu/index.html
+++ b/menu/index.html
@@ -515,22 +515,7 @@
                     <div class="col-12">
                         <div class="row" id="listaItensResumo">
 
-                            <div class="col-12 item-carrinho resumo">
-                                <div class="img-produto-resumo">
-                                    <img src="./img/cardapio/burguers/burger-au-poivre-kit-4-pack.3ca0e39b02db753304cd185638dad518.jpg" />
-                                </div>
-                                <div class="dados-produto">
-                                    <p class="title-produto-nome">
-                                        <b>Nome do produto</b>
-                                    </p>
-                                    <p class="price-produto-nome">
-                                        <b>R$ 100,00</b>
-                                    </p>
-                                </div>
-                                <p class="quantidade-produto-resumo">
-                                    x <b>3</b>
-                                </p>
-                            </div>
+
 
                         </div>
                     </div>
@@ -547,10 +532,10 @@
                         </div>
                         <div class="dados-produto">
                             <p class="texto-endereco">
-                                <b id="resumoEndereco">Rua teste, 200, bairro teste</b>
+                                <b id="resumoEndereco"></b>
                             </p>
                             <p class="cidade-endereco" id="cidadeEndereco">
-                                Cidade-SP / 12921-890
+                                
                             </p>
                         </div>
                     </div>
