--- a/menu/index.html
+++ b/menu/index.html
@@ -571,7 +571,7 @@
                 Revisar pedido
             </a>
 
-            <a onclick="cardapio.metodos.finalizarPedido()" class="btn btn-yellow float-right hidden" id="btnEtapaResumo">
+            <a  class="btn btn-yellow float-right hidden" id="btnEtapaResumo" target="_blank">
                 Enviar pedido
             </a>
 
