projeto menu - botao de reserva enviando mensagem para whatsapp do restaurante

--- a/menu/index.html
+++ b/menu/index.html
@@ -338,7 +338,7 @@
                                     <br>
                                     Reserve sua data e horario de forma simples e rapida.
                                 </p>
-                                <a class="btn btn-yellow mt-4">
+                                <a class="btn btn-yellow mt-4" id="btnReserva" target="_blank">
                                     Fazer reserva
                                 </a>
                             </div>
