criacao do projetos-51 - fundamentos - containers

--- a/projetos-51/fundamentos/index.html
+++ b/projetos-51/fundamentos/index.html
@@ -29,6 +29,19 @@
         <p class="text-dark">text dark</p>
     </div>
 
+    <hr>
+    <div class="container">
+      <h4>Containers</h4>
+      <div class="row justify-content-center">
+        <div class="col-md-6 text-white" style="background-color: red;">
+          column
+        </div>
+        <div class="col-md-6 text-center" style="background-color: blue;">
+          column
+        </div>
+      </div>
+    </div>
+
     <!-- Optional JavaScript; choose one of the two! -->
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
