criacao do projetos-51 - fundamentos - utilitarios de cores

--- a/projetos-51/fundamentos/index.html
+++ b/projetos-51/fundamentos/index.html
@@ -19,7 +19,7 @@
 
     <hr>
     <div class="container">
-        <h4>cores</h4>
+        <h4>Cores</h4>
         <p class="text-primary">text primary</p>
         <p class="text-secondary">text secondary</p>
         <p class="text-success">text success</p>
