criacao do projetos-51 - fundamentos - sistema de grids com pontos de interrupcao parte 2

--- a/projetos-51/fundamentos/index.html
+++ b/projetos-51/fundamentos/index.html
@@ -81,6 +81,32 @@
       </div>
     </div>
 
+    <br>
+    <div class="container">
+      <div class="row">
+        <div class="col">
+          1 de 3
+        </div>
+        <div class="col-6">
+          2 de 3
+        </div>
+        <div class="col">
+          3 de 3
+        </div>
+      </div>
+      <div class="row">
+        <div class="col">
+          1 de 3
+        </div>
+        <div class="col-5">
+          2 de 3
+        </div>
+        <div class="col">
+          3 de 3
+        </div>
+      </div>
+    </div>
+
     <!-- Optional JavaScript; choose one of the two! -->
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
