--- a/projetos-51/fundamentos/index.html
+++ b/projetos-51/fundamentos/index.html
@@ -60,6 +60,7 @@
 
     <br>
     <div class="container">
+      <h4>largura de colunas iguais</h4>
       <div class="row">
         <div class="col">
           1 de 2
