criacao do projetos-51 - fundamentos - tipografias

--- a/projetos-51/fundamentos/index.html
+++ b/projetos-51/fundamentos/index.html
@@ -152,6 +152,29 @@
       </div>
     </div>
 
+    <hr>
+    <div class="container">
+      <h4>Tipografia</h4>
+      <div class="row">
+        <h4>Cabeçalhos</h4>
+        <p class="h1">cabeçalho h1 bootstrap</p>
+        <p class="h2">cabeçalho h2 bootstrap</p>
+        <p class="h3">cabeçalho h3 bootstrap</p>
+        <p class="h4">cabeçalho h4 bootstrap</p>
+        <p class="h5">cabeçalho h5 bootstrap</p>
+        <p class="h6">cabeçalho h6 bootstrap</p>
+      </div>
+      <div class="row">
+        <h4>Display</h4>
+        <h1 class="display-1">Display 1</h1>
+        <h1 class="display-2">Display 2</h1>
+        <h1 class="display-3">Display 3</h1>
+        <h1 class="display-4">Display 4</h1>
+        <h1 class="display-5">Display 5</h1>
+        <h1 class="display-6">Display 6</h1>
+      </div>
+    </div>
+
     <!-- Optional JavaScript; choose one of the two! -->
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
