criacao do projetos-51 - fundamentos - imagens

--- a/projetos-51/fundamentos/index.html
+++ b/projetos-51/fundamentos/index.html
@@ -175,6 +175,11 @@
       </div>
     </div>
 
+    <hr>
+    <div class="container">
+      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQAjBk613yaZ_qm31ZcS9e5zYf2JFcLXPkOZQ&s" class="img-fluid">
+    </div>
+
     <!-- Optional JavaScript; choose one of the two! -->
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
