criacao do projetos-51 - fundamentos - formularios

--- a/projetos-51/fundamentos/index.html
+++ b/projetos-51/fundamentos/index.html
@@ -180,6 +180,24 @@
       <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQAjBk613yaZ_qm31ZcS9e5zYf2JFcLXPkOZQ&s" class="img-fluid">
     </div>
 
+    <hr>
+    <div class="container">
+      <h4>Formularios</h4>
+      <div>
+        <label for="email">Email</label>
+        <input type="email" class="form-control" id="email">
+      </div>
+      <div class="">
+        <label for="password">Password</label>
+        <input type="password" class="form-control" id="password" >
+      </div>
+      <div >
+        <input type="checkbox" class="form-check-input" id="check1" >
+        <label class="form-check-label" for="check1">Selecione me</label>
+      </div>
+      <button type="submit" class="btn btn-primary">Enviar</button>
+    </div>
+
     <!-- Optional JavaScript; choose one of the two! -->
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
