projetos educ - navbar finalizacao

--- a/projetos-51/educ/index.html
+++ b/projetos-51/educ/index.html
@@ -15,7 +15,7 @@
   </head>
   <body>
     
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg navbar-light bg-white fixed-top">
         <div class="container">
             <a class="navbar-brand" href="#">
                 <img src="assets/img/logo.png" alt="logo" width="100" height="44" >
@@ -26,14 +26,14 @@
             </button>
             <div class="collpase navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
-                    <li class="nav-item">
-                        <a class="nav-link" aria-current="page" href="#">Inicio</a>
+                    <li class="nav-item px-2">
+                        <a class="nav-link fw-bolder text-dark" aria-current="page" href="#">Inicio</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Sobre</a>
+                    <li class="nav-item px-2">
+                        <a class="nav-link fw-bolder text-dark" href="#">Sobre</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Contato</a>
+                    <li class="nav-item px-2">
+                        <a class="nav-link fw-bolder text-dark" href="#">Contato</a>
                     </li>
                 </ul>
             </div>
