projetos educ - sessao capa formatacoes

--- a/projetos-51/educ/index.html
+++ b/projetos-51/educ/index.html
@@ -42,14 +42,14 @@
 
     <section class="capa bg-success">
         <div class="container">
-            <div class="row py-5 mt-5">
-                <div class="col-md-6 ">
-                    <h1>BEM VINDO AO EDUC</h1>
-                    <h3>Conhecimento para vida toda</h3>
+            <div class="row align-items-center py-5 mt-5">
+                <div class="col-md-6 text-white">
+                    <h1 class="fs-5">BEM VINDO AO EDUC</h1>
+                    <h3 class="fw-bolder display-3">Conhecimento para vida toda</h3>
                     <a>Saber mais</a>
                 </div>
                 <div class="col-md-6 ">
-                    coluna
+                    <img src="assets/img/capa.png" class="img-fluid" alt="capa" width="500" height="500" >
                 </div>
             </div>
         </div>
